[package]
name = "zwreec"
version = "0.0.2"
authors = [
    "victor.brekenfeld@fu-berlin.de", "franz.greiling@fu-berlin.de",
    "kai.lueke@fu-berlin.de", "irina.makarenko@fu-berlin.de",
    "papierschiff@zedat.fu-berlin.de", "berikobama@zedat.fu-berlin.de",
    "finn.wilke@fu-berlin.de", "b.zengin@fu-berlin.de"
]
description = "Twee to Z-Code Compiler in Rust"
repository = "https://github.com/Drakulix/zwreec"
documentation = "https://drakulix.github.io/zwreec/zwreec/index.html"
readme = "README.md"
license = "BSD-2-Clause"

[lib]
name = "zwreec"
path = "src/zwreec/lib.rs"

[[bin]]
name = "zwreec"
path = "src/bin/zwreec.rs"
test = false
doc = false

[dependencies]
time = "*"
libc = "*"
log = "*"
term = "0.2"

getopts = "0.2.10"

[dependencies.rustlex]
git = "https://github.com/farthen/rustlex.git"
rev = "5fb0824727e39fed05559b1807eace5349ccca23"
