[package]
name = "zwreec"
version = "1.0.0"
authors = [
    "victor.brekenfeld@fu-berlin.de", "franz.greiling@fu-berlin.de",
    "kai.lueke@fu-berlin.de", "irina.makarenko@fu-berlin.de",
    "papierschiff@zedat.fu-berlin.de", "berikobama@zedat.fu-berlin.de",
    "finn.wilke@fu-berlin.de", "b.zengin@fu-berlin.de"
]
description = "Twee to Z-Code Compiler in Rust"
repository = "https://github.com/Drakulix/zwreec"
documentation = "https://drakulix.github.io/zwreec/zwreec/index.html"
readme = "README.md"
license = "BSD-2-Clause"
build = "build.rs"

[lib]
name = "zwreec"
path = "src/zwreec/lib.rs"

[[bin]]
name = "zwreec"
path = "src/bin/zwreec.rs"
test = false
doc = false

[build-dependencies]
rustlex_codegen = { version = "*", git = "https://github.com/farthen/rustlex", rev = "4853e10833bae030ac779438a4c3f2ece654cd06", features = ["with-syntex"] }
syntex          = "*"

[dependencies]
time = "*"
libc = "*"
log = "*"
term = "0.2"
getopts = "0.2.10"
rustlex_codegen = { version = "*", git = "https://github.com/farthen/rustlex", rev = "4853e10833bae030ac779438a4c3f2ece654cd06", features = ["with-syntex"] }
